--- a/store.css
+++ b/store.css
@@ -187,14 +187,14 @@ ul li:hover ul {
 .product {
     background-color: rgba(195, 7, 63, 0.2);
     ;
-    display: grid;
+    /*display: grid;*/
     margin: 10px;
     grid-gap: 1px;
-    grid-template-areas:
+     /*grid-template-areas:
         'col11 col12 col13 col14'
         'col21 col22 col23 col24'
         'col31 col32 col33 col34'
-        'col41 col42 col43 col44';
+        'col41 col42 col43 col44';*/
     border: 1px solid black;
     color: white;
     text-align: center;
@@ -338,10 +338,10 @@ ul li:hover ul {
     .product {
         background-color: rgba(195, 7, 63, 0.2);
         ;
-        display: grid;
+        /*display: grid;*/
         margin: -4px;
         grid-gap: 1px;
-        grid-template-areas:
+       /* grid-template-areas:
             'col11 col12'
             'col21 col22'
             'col31 col32'
@@ -349,7 +349,7 @@ ul li:hover ul {
             'col51 col52'
             'col61 col62'
             'col71 col72'
-            'col81 col82';
+            'col81 col82';*/
         border: 1px solid black;
         color: white;
         text-align: center;
