--- a/view/SignUp.html
+++ b/view/SignUp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="SignUpStyle.css">
+    <link rel="stylesheet" type="text/css" href="../css/SignUpStyle.css">
     <title>ثبت نام</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
             <table width="550" border="1px" border-radius="5px" align="center">
                 <tr>
                     <td colspan="2" align="center">
-                        <img src="logo.png">
+                        <img src="../Images/logo.png">
                     </td>
                 </tr>
 
@@ -43,7 +43,7 @@
                     </td>
                     <td>
                         <input type="text" maxlength="20" size="65" placeholder="نام کاربری خود را وارد کنید"
-                            name="username" onkeypress="return (event.charCode >= 65 && event.charCode <= 90) || 
+                            name="UserName" onkeypress="return (event.charCode >= 65 && event.charCode <= 90) || 
                             (event.charCode >= 97 && event.charCode <= 122) || (event.charCode >= 48 && event.charCode <= 57)" required>
                     </td>
                 </tr>
@@ -53,7 +53,7 @@
                         کلمه عبور :
                     </td>
                     <td>
-                        <input type="password" size="65" placeholder="کلمه عبور خود را وارد کنید"
+                        <input type="PassWord" size="65" placeholder="کلمه عبور خود را وارد کنید"
                             name="passwd" required>
                     </td>
                 </tr>
