--- a/view/SignIn.html
+++ b/view/SignIn.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="SignInStyle.css">
+    <link rel="stylesheet" type="text/css" href="../css/SignInStyle.css">
     <title>ورود</title>
 </head>
 <body>
     <fieldset dir="rtl">
         <legend>ورود به حساب کاربری</legend>
-        <form action="">
+        <form action="../index.php" method="post">
             <table width="550" border="1px" border-radius="5px" align="center">
                 <tr>
                     <td colspan="2" align="center">
-                        <img src="logo.png">
+                        <img src="../Images/logo.png">
                     </td>
                 </tr>
 
@@ -24,7 +24,7 @@
                     </td>
                     <td>
                         <input type="text" maxlength="20" size="65" placeholder="نام کاربری خود را وارد کنید"
-                            name="username" onkeypress="return (event.charCode >= 65 && event.charCode <= 90) || 
+                            name="uiUserName" onkeypress="return (event.charCode >= 65 && event.charCode <= 90) || 
                             (event.charCode >= 97 && event.charCode <= 122) || (event.charCode >= 48 && event.charCode <= 57)" required>
                     </td>
                 </tr>
@@ -34,14 +34,15 @@
                         کلمه عبور :
                     </td>
                     <td>
-                        <input type="password" size="65" placeholder="کلمه عبور خود را وارد کنید"
-                            name="passwd" required>
+                        <input type="PassWord" size="65" placeholder="کلمه عبور خود را وارد کنید"
+                            name="uiPassWord" required>
                     </td>
                 </tr>
 
                 <tr>
                     <td colspan="2" align="center">
                         <input type="submit" class="Sub" value="ورود" name="submit">
+                        <a href="../signup.php">ثبت نام</a>
                     </td>
                 </tr>
 
