--- a/view/store.html
+++ b/view/store.html
@@ -1,180 +1,17 @@
-<!DOCTYPE html>
-<html lang="en" dir="rtl">
-
-<head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Shafagh Online Store</title>
-        <link rel="stylesheet" type="text/css" href="../css/store.css">
-</head>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.32/angular.min.js"></script>
-<script src="../js/loaded.js"></script>
-<body>
-        <div class="navBar">
-                <img src="../Images/logo.png" class="logo">
-                <ul class="StickyPosition">
-
-                        <li><a href="https://www.digikala.com/search/category-notebook-netbook-ultrabook/"
-                                        target="_blank">لپ
-                                        تاپ</a>
-                                <ul>
-                                        <li><a href="https://www.digikala.com/search/category-notebook-netbook-ultrabook/?brand[0]=10&pageno=1&last_filter=brand&last_value=10&sortby=4"
-                                                        target="_blank">اپل</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-notebook-netbook-ultrabook/?brand[0]=94&pageno=1&last_filter=brand&last_value=94&sortby=4"
-                                                        target="_blank">لنوو</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-notebook-netbook-ultrabook/?brand[0]=4&pageno=1&last_filter=brand&last_value=4&sortby=4"
-                                                        target="_blank">ایسوس</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-notebook-netbook-ultrabook/?brand[0]=6&pageno=1&last_filter=brand&last_value=6&sortby=4"
-                                                        target="_blank">اچ پی</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-notebook-netbook-ultrabook/?brand[0]=2&pageno=1&last_filter=brand&last_value=6&sortby=4"
-                                                        target="_blank">دل</a></li>
-                                </ul>
-                        </li>
-                        <li>
-                                <a href="https://www.digikala.com/search/category-mobile-phone/"
-                                        target="_blank">موبایل</a>
-                                <ul>
-                                        <li><a href="https://www.digikala.com/search/category-mobile-phone/?brand[0]=10&pageno=1&last_filter=brand&last_value=10&sortby=4"
-                                                        target="_blank">اپل</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-mobile-phone/?brand[0]=18&pageno=1&last_filter=brand&last_value=18&sortby=4"
-                                                        target="_blank">سامسونگ</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-mobile-phone/?brand[0]=82&pageno=1&last_filter=brand&last_value=82&sortby=4"
-                                                        target="_blank">هواوی</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-mobile-phone/?brand[0]=1662&pageno=1&last_filter=brand&last_value=1662&sortby=4"
-                                                        target="_blank">شیائومی</a></li>
-                                </ul>
-                        </li>
-                        <li>
-                                <a href="https://www.digikala.com/search/category-tablet/" target="_blank">تبلت</a>
-                                <ul>
-                                        <li><a href="https://www.digikala.com/search/category-tablet/?brand[0]=18&pageno=1&last_filter=brand&last_value=18&sortby=4"
-                                                        target="_blank">سامسونگ</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-tablet/?brand[0]=10&pageno=1&last_filter=brand&last_value=10&sortby=4"
-                                                        target="_blank">اپل</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-tablet/?brand[0]=51&pageno=1&last_filter=brand&last_value=51&sortby=4"
-                                                        target="_blank">مایکروسافت</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-tablet/?brand[0]=94&pageno=1&last_filter=brand&last_value=94&sortby=4"
-                                                        target="_blank">لنوو</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-tablet/?brand[0]=82&pageno=1&last_filter=brand&last_value=82&sortby=4"
-                                                        target="_blank">هواوی</a></li>
-                                </ul>
-                        </li>
-                        <li>
-                                <a href="https://www.digikala.com/search/category-headphone-headset-microphone/"
-                                        target="_blank">هدست</a>
-                                <ul>
-                                        <li><a href="https://www.digikala.com/search/category-headphone-headset-microphone/?brand[0]=18&pageno=1&last_filter=brand&last_value=18&sortby=4"
-                                                        target="_blank">سامسونگ</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-headphone-headset-microphone/?brand[0]=10&pageno=1&last_filter=brand&last_value=10&sortby=4"
-                                                        target="_blank">اپل</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-headphone-headset-microphone/?brand[0]=1662&pageno=1&last_filter=brand&last_value=1662&sortby=4"
-                                                        target="_blank">شیائومی</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-headphone-headset-microphone/?brand[0]=94&pageno=1&last_filter=brand&last_value=94&sortby=4"
-                                                        target="_blank">لنوو</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-headphone-headset-microphone/?brand[0]=56&pageno=1&last_filter=brand&last_value=94&sortby=4"
-                                                        target="_blank">تسکو</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-headphone-headset-microphone/?brand[0]=6548&pageno=1&last_filter=brand&last_value=6548&sortby=4"
-                                                        target="_blank">کیو سی وای</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-headphone-headset-microphone/?brand[0]=1096&pageno=1&last_filter=brand&last_value=1096&sortby=4"
-                                                        target="_blank">جی بی ال</a></li>
-                                </ul>
-                        </li>
-                        <li class="last-item">
-                                <a href="https://www.digikala.com/search/category-usb-flash-memory/"
-                                        target="_blank">فلش</a>
-                                <ul>
-                                        <li><a href="https://www.digikala.com/search/category-usb-flash-memory/?brand[0]=61&pageno=1&last_filter=brand&last_value=61&sortby=4"
-                                                        target="_blank">ای دیتا</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-usb-flash-memory/?brand[0]=63&pageno=1&last_filter=brand&last_value=61&sortby=4"
-                                                        target="_blank">سن دیسک</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-usb-flash-memory/?brand[0]=83&pageno=1&last_filter=brand&last_value=63&sortby=4"
-                                                        target="_blank">سیلیکون پاور</a></li>
-                                        <li><a href="https://www.digikala.com/search/category-usb-flash-memory/?brand[0]=6&pageno=1&last_filter=brand&last_value=83&sortby=4"
-                                                        target="_blank">اچ پی</a></li>
-                                </ul>
-                        </li>
-                </ul>
-                <a href="https://www.digikala.com/cart/" target="_blank">
-                        <img class="s-icon" src="../Images/sh-cart.svg">
-                </a>
-                <a href="https://www.digikala.com/users/login-register/?_back=https://www.digikala.com/"
-                        target="_blank">
-                        <img class="l-icon" src="../Images/user-logo.svg">
-                </a>
-
-        </div>
 
 <div method="post" ng-app="myApp" ng-controller="myController">
-        <div class="product" ng-repeat="x in products">
-                <div class="prod-title"> 
-                        <a href="https://www.digikala.com">
-                                <img class="prod-img" alt="{{x.Pname}}" ng-src="../{{x.Pic}}">
-                        </a>
-                        <p class="prod-title">{{x.ProdName}}</p>
-                        <p>{{x.TechInfo}}</p>
-                        <p>{{x.Info}}</p>
-                        <p><u>{{x.Price}} تـومـان</u></p>
-                </div>              
-        </div>
+                <div class="product" ng-repeat="x in products" ng-click="f(x.ProdName)" >
+                
+                                <div class="prod-title"> 
+                                        <a>
+                                                <img class="prod-img" alt="{{x.Pname}}" ng-src="{{x.Pic}}">
+                                        </a>
+                                        
+                                        <p class="prod-title">{{x.ProdName}}</p>
+                                        <p>{{x.TechInfo}}</p>
+                                        <p>{{x.Info}}</p>
+                                        <p><u>{{x.Price}} تـومـان</u></p>
+                                </div> 
+                        
+                </div>  
 </div>        
-        <div class="footer">
-                <div class="info">
-                        <div class="contact-us">
-                                <h4>
-                                        ارتباط با ما
-                                </h4>
-                                <p>
-                                        شماره تماس: 09397579104
-                                </p>
-                                <p>
-                                        آدرس: زنجان - بلوار پرفسور یوسف ثبوتی - شماره 444
-                                </p>
-                        </div>
-                        <div class="relatedSites footer-links">
-                                <h4 class="links-title" style="    margin-right: -19%;margin-bottom: 4%; color: black;">
-                                        لینک های مرتبط
-                                </h4>
-                                <ul>
-                                        <li>
-                                                <a href="https://www.zanbil.ir">زنبیل</a>
-                                        </li>
-                                        <li>
-                                                <a href="https://www.digistyle.com">دیجی استایل</a>
-                                        </li>
-                                        <li>
-                                                <a href="https://torob.com">ترب</a>
-                                        </li>
-                                        <li>
-                                                <a href="https://www.amazon.com">آمازون</a>
-                                        </li>
-                                        <li>
-                                                <a href="https://wwww.digikala.com">دیجیکالا</a>
-                                        </li>
-                                        <li>
-                                                <a href="https://www.banimode.com">بانی مد</a>
-                                        </li>
-                                </ul>
-                        </div>
-                </div>
-                <div class="socialMedia">
-                        <ul>
-                                <li>
-                                        <a href="https://t.me/fatemesohraabi"><img src="../Images/telegram.png"></a>
-                                </li>
-                                <li>
-                                        <a href="https://instagram.com/sohrabi__fateme?utm_medium=copy_link"><img
-                                                        src="../Images/instagram.png"></a>
-                                </li>
-                                <li>
-                                        <a href="mailto:fatemesohrabi1379@gmail.com"><img src="../Images/gmail.png"></a>
-                                </li>
-                                <li>
-                                        <a href="mailto:hadinasiri1385@yahoo.com"><img src="../Images/yahoo.png"></a>
-                                </li>
-                        </ul>
-                </div>
-
-</body>
-
-</html>
