--- a/css/store.css
+++ b/css/store.css
@@ -14,6 +14,20 @@ body {
     src: url(../fonts/BYekan.ttf) format('ttf');
     src: url(../fonts/BYekan.woff) format('woff');
 }
+.btnplus
+{
+    background-color: transparent;
+    border: none;
+    margin-top: -70%;
+    width: 6%;
+    height: 8%;
+    margin-right: -1%;
+}
+.pluscard
+{
+    width: 66%;
+    margin-bottom: 339%;
+}
 
 .navBar {
     background-color: #eed6ca;
