--- a/view/Product.html
+++ b/view/Product.html
@@ -1,4 +1,5 @@
- <div class="product">
+<link rel="stylesheet" type="text/css" href="css/Product.css">
+<div class="product">
                 
         <div class="prod-title"> 
                 
