--- a/view/Profile.html
+++ b/view/Profile.html
@@ -33,6 +33,7 @@
 		<input type="address" size="65" name="uiPhone" value="<?php echo $Phone;?>"><br>
 		<br>
 		<input class="but" type="submit" value="ثبت تغییرات" name="change">
+		<input class="but" type="submit" value="خروج از حساب کاربری" name="SignOut">
 	</form>
 	<hr>
 	<div dir="rtl" class="cart">
