--- a/css/Product.css
+++ b/css/Product.css
@@ -21,3 +21,27 @@
     width: 66%;
     margin-bottom: 339%;
 }
+
+@media only screen and (max-width: 100) {
+    .pluscard
+    {
+        width: 110%;
+        margin-bottom: 370%;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .pluscard
+    {
+        width: 120%;
+        margin-bottom: 370%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .pluscard
+    {
+        width: 240%;
+        margin-bottom: 370%;
+    }
+}
