--- a/css/SignUpStyle.css
+++ b/css/SignUpStyle.css
@@ -13,10 +13,6 @@ body {
     font-family: 'BYekan', Arial, sans-serif;
 }
 
-fieldset{
-    margin-left: 450px;
-    margin-right: 450px;
-}
 input{
     background-color: mintcream;
     border-radius: 5px;
@@ -34,4 +30,11 @@ input:focus,
 input:active {
   border-color: transparent;
   border-bottom: 2px solid #1c87c9;
+}
+
+@media only screen and (max-width: 600px) {
+    table{
+        width: auto;
+        text-align: center;
+    }
 }
