--- a/css/store.css
+++ b/css/store.css
@@ -14,20 +14,6 @@ body {
     src: url(../fonts/BYekan.ttf) format('ttf');
     src: url(../fonts/BYekan.woff) format('woff');
 }
-.btnplus
-{
-    background-color: transparent;
-    border: none;
-    margin-top: -70%;
-    width: 6%;
-    height: 8%;
-    margin-right: -1%;
-}
-.pluscard
-{
-    width: 66%;
-    margin-bottom: 339%;
-}
 
 .navBar {
     background-color: #eed6ca;
@@ -179,6 +165,8 @@ ul li:hover ul {
     background-color: #eed6ca;
     width: 100%;
     color: black;
+    padding-top: 5px;
+    z-index: 0;
 }
 
 .contact-us {
@@ -279,7 +267,9 @@ ul li:hover ul {
 }
 
 .product div {
+    position: relative;
     border: 1px solid black;
+    z-index: 2;
 }
 
 .prod-img {
@@ -300,6 +290,7 @@ ul li:hover ul {
 .prod-title {
     font-weight: bold;
     text-shadow: 0 0 5px #000000;
+    z-index: 1;
 }
 
 @media only screen and (max-width: 600px) {
@@ -351,23 +342,13 @@ ul li:hover ul {
 
     .product {
         background-color: rgba(195, 7, 63, 0.2);
-        ;
-        /*display: grid;*/
         margin: -4px;
         grid-gap: 1px;
-       /* grid-template-areas:
-            'col11 col12'
-            'col21 col22'
-            'col31 col32'
-            'col41 col42'
-            'col51 col52'
-            'col61 col62'
-            'col71 col72'
-            'col81 col82';*/
         border: 1px solid black;
         color: white;
         text-align: center;
         font-size: x-small;
+        z-index: 1;
     }
 
     .prod1 {
