--- a/view/SignUp.html
+++ b/view/SignUp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,95 +8,97 @@
     <link rel="stylesheet" type="text/css" href="css/SignUpStyle.css">
     <title>ثبت نام</title>
 </head>
+
 <body>
-    <fieldset dir="rtl">
-        <legend>ثبت نام</legend>
-        <form action="SignUp.php" method="post">
-            <table width="550" border="1px" border-radius="5px" align="center">
-                <tr>
-                    <td colspan="2" align="center">
-                        <img src="Images/logo.png">
-                    </td>
-                </tr>
+    <legend>ثبت نام</legend>
+    <form action="SignUp.php" method="post">
+        <table width="550" border="1px" border-radius="5px" align="center">
+            <tr>
+                <td colspan="2" align="center">
+                    <img src="Images/logo.png">
+                </td>
+            </tr>
 
-                <tr>
-                    <td width="150" align="left">
-                        نام:
-                    </td>
-                    <td>
-                        <input type="text" maxlength="20" size="65" placeholder="نام خود را وارد کنید" name="uiFname" required>
-                    </td>
-                </tr>
+            <tr>
+                <td width="150" align="left">
+                    نام:
+                </td>
+                <td>
+                    <input type="text" maxlength="20" size="65" placeholder="نام خود را وارد کنید" name="uiFname"
+                        required>
+                </td>
+            </tr>
 
-                <tr>
-                    <td width="150" align="left">
-                        نام خانوادگی :
-                    </td>
-                    <td>
-                        <input type="text" maxlength="20" size="65" placeholder="نام خانوادگی خود را وارد کنید"
-                            name="uiLname" required>
-                    </td>
-                </tr>
+            <tr>
+                <td width="150" align="left">
+                    نام خانوادگی :
+                </td>
+                <td>
+                    <input type="text" maxlength="20" size="65" placeholder="نام خانوادگی خود را وارد کنید"
+                        name="uiLname" required>
+                </td>
+            </tr>
 
-                <tr>
-                    <td width="150" align="left">
-                        نام کاربری :
-                    </td>
-                    <td>
-                        <input type="text" maxlength="20" size="65" placeholder="نام کاربری خود را وارد کنید"
-                            name="uiUserName" onkeypress="return (event.charCode >= 65 && event.charCode <= 90) || 
+            <tr>
+                <td width="150" align="left">
+                    نام کاربری :
+                </td>
+                <td>
+                    <input type="text" maxlength="20" size="65" placeholder="نام کاربری خود را وارد کنید"
+                        name="uiUserName"
+                        onkeypress="return (event.charCode >= 65 && event.charCode <= 90) || 
                             (event.charCode >= 97 && event.charCode <= 122) || (event.charCode >= 48 && event.charCode <= 57)" required>
-                    </td>
-                </tr>
+                </td>
+            </tr>
 
-                <tr>
-                    <td width="150" align="left">
-                        کلمه عبور :
-                    </td>
-                    <td>
-                        <input type="PassWord" size="65" placeholder="کلمه عبور خود را وارد کنید"
-                            name="uiPassWord" required>
-                    </td>
-                </tr>
+            <tr>
+                <td width="150" align="left">
+                    کلمه عبور :
+                </td>
+                <td>
+                    <input type="PassWord" size="65" placeholder="کلمه عبور خود را وارد کنید" name="uiPassWord"
+                        required>
+                </td>
+            </tr>
 
-                <tr>
-                    <td width="150" align="left">
-                        ایمیل :
-                    </td>
-                    <td>
-                        <input type="text" size="65" placeholder="ایمیل خود را وارد کنید" name="uiEmail" required>
-                    </td>
-                </tr>
+            <tr>
+                <td width="150" align="left">
+                    ایمیل :
+                </td>
+                <td>
+                    <input type="text" size="65" placeholder="ایمیل خود را وارد کنید" name="uiEmail" required>
+                </td>
+            </tr>
 
-                <tr>
-                    <td width="150" align="left">
-                        شماره تلفن :
-                    </td>
-                    <td>
-                        <input type="tel" size="65"
-                            placeholder="شماره تلفن خود را با فرمت (1111 111 0911) بدون فاصله وارد کنید"
-                            pattern="09[0-9]{2}[0-9]{3}[0-9]{4}" required name="uiPhone">
-                    </td>
-                </tr>
+            <tr>
+                <td width="150" align="left">
+                    شماره تلفن :
+                </td>
+                <td>
+                    <input type="tel" size="65"
+                        placeholder="شماره تلفن خود را با فرمت (1111 111 0911) بدون فاصله وارد کنید"
+                        pattern="09[0-9]{2}[0-9]{3}[0-9]{4}" required name="uiPhone">
+                </td>
+            </tr>
 
-                <tr>
-                    <td width="150" align="left" valign="top">
-                        آدرس :
-                    </td>
-                    <td>
-                        <textarea rows="10" cols="65" name="uiAddress" required></textarea>
-                    </td>
-                </tr>
+            <tr>
+                <td width="150" align="left" valign="top">
+                    آدرس :
+                </td>
+                <td>
+                    <textarea rows="10" cols="65" name="uiAddress" required></textarea>
+                </td>
+            </tr>
 
-                <tr>
-                    <td colspan="2" align="center">
-                        <input type="submit" value="ثبت نام" name="submit">
-                        <input type="reset" value="پاک کردن فرم">
-                    </td>
-                </tr>
-            </table>
+            <tr>
+                <td colspan="2" align="center">
+                    <input type="submit" value="ثبت نام" name="submit">
+                    <input type="reset" value="پاک کردن فرم">
+                </td>
+            </tr>
+        </table>
 
-        </form>
-    </fieldset>
+    </form>
 </body>
+
 </html>
