--- a/view/share/header.html
+++ b/view/share/header.html
@@ -13,7 +13,7 @@
         if (basename($_SERVER['PHP_SELF']) == 'Signup.php')
                 echo '<link rel="stylesheet" href="css/SignUpStyle.css" />';
         if (basename($_SERVER['PHP_SELF']) == 'Profile.php')
-                echo '<link rel="stylesheet" href="css/ProfileStyle.css" />';        
+                echo '<link rel="stylesheet" href="css/store.css" />';        
         ?>
 </head>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.32/angular.min.js"></script>
