--- a/view/SignIn.html
+++ b/view/SignIn.html
@@ -10,10 +10,9 @@
 </head>
 
 <body>
-    <legend>ورود به حساب کاربری</legend>
     <form action="Signin.php" method="post">
 
-        <table width="550" border="1px" border-radius="5px" align="center">
+        <table width="550" border-radius="5px" align="center">
             <tr>
                 <td colspan="2" align="center">
                     <img src="Images/logo.png">
