--- a/view/SignUp.html
+++ b/view/SignUp.html
@@ -10,9 +10,8 @@
 </head>
 
 <body>
-    <legend>ثبت نام</legend>
     <form action="SignUp.php" method="post">
-        <table width="550" border="1px" border-radius="5px" align="center">
+        <table width="550" border-radius="5px" align="center">
             <tr>
                 <td colspan="2" align="center">
                     <img src="Images/logo.png">
