--- a/css/SignInStyle.css
+++ b/css/SignInStyle.css
@@ -22,9 +22,9 @@ textarea{
     background-color: mintcream;
     border-radius: 5px;
 }
-legend{
-    text-align: center;
-    font-weight: 600;
+
+.Sub{
+    font-size: large;
 }
 
 input:focus,
@@ -36,14 +36,13 @@ input:active {
   border-right: 2px solid crimson;
 }
 
-.Sub{
-    font-size: x-large;
-    width: 200px;
-}
-
 @media only screen and (max-width: 600px) {
     table{
         width: auto;
         text-align: center;
     }
+}
+
+.buts{
+    text-align: left;
 }
