--- a/view/SignIn.html
+++ b/view/SignIn.html
@@ -45,9 +45,9 @@
             </tr>
 
             <tr>
-                <td colspan="2" align="center">
-                    <input type="submit" class="Sub" value="ورود" name="submit">
-                    <a href="signup.php"><input type="button" class="Sub" value="ثبت نام" name="sUp"></a>
+                <td colspan="2" align="left">
+                    <input type="submit" class="Sub" value="ورود" name="submit" style=" width: 165px; ">
+                    <a href="signup.php"><input type="button" class="Sub" value="ثبت نام" name="sUp" style=" width: 165px; margin-left: 34px; margin-top: 10px;"></a>
                 </td>
             </tr>
 
